leptos_macro/tests/view/26_into_prop_wrong_type.stderr
error[E0277]: the trait bound `std::string::String: From<Vec<{integer}>>` is not satisfied
  --> tests/view/26_into_prop_wrong_type.rs:11:26
   |
11 |             <Inner label=vec![1, 2, 3]/>
   |                    ----- ^^^ the trait `From<Vec<{integer}>>` is not implemented for `std::string::String`
   |                    |
   |                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             `std::string::String` implements `From<&JsString>`
             `std::string::String` implements `From<&mut str>`
             `std::string::String` implements `From<&std::string::String>`
             `std::string::String` implements `From<&str>`
             `std::string::String` implements `From<Box<str>>`
             `std::string::String` implements `From<Cow<'_, str>>`
             `std::string::String` implements `From<JsString>`
             `std::string::String` implements `From<Oco<'_, str>>`
           and $N others
   = note: required for `Vec<{integer}>` to implement `Into<std::string::String>`
   = note: required for `Vec<{integer}>` to implement `leptos::prelude::IntoReactiveValue<std::string::String, __IntoReactiveValueMarkerBaseCase>`
note: required by a bound in `InnerPropsBuilder::label`
  --> tests/view/26_into_prop_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `InnerPropsBuilder::label`
17 | fn Inner(#[prop(into)] label: String) -> impl IntoView {
   |                        ----- required by a bound in this associated function
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
